# mango

./: .gitignore  Bezier.cpp  Bezier.h  CMakeLists.txt  CocoaWindow.h  CocoaWindow.mm  CocoaWindowInterface.cpp  CocoaWindowInterface.h  Color.cpp  Color.h  CustomWidget.cpp  CustomWidget.h  CustomWindow.cpp  CustomWindow.h  Mango.h  MangoConfig.cmake.in  MangoTargets.cmake  Point.cpp  Point.h  README.md  Rect.cpp  Rect.h  Size.cpp  Size.h  TestWidget.cpp  TestWidget.h  Win32Application.cpp  Win32Application.h  Win32Window.cpp  androiddeploy.sh  main.cpp  metal_config.h
Widgets/: ToggleButton.cpp  ToggleButton.h
android/: AndroidManifest.xml  build.gradle  gradlew  local.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/jar/: CMakeLists.txt
android/jar/src/mangoproject/mango/android/: MainActivity.java  WidgetView.java
cmake/: CoreConfig.cmake.in  MangoConfig.cmake.in  WidgetsConfig.cmake.in
cmake/android/: WidgetsConfig.cmake.in
cmake/ios/: WidgetsConfig.cmake  WidgetsConfig.cmake.in  WidgetsConfigVersion.cmake  WidgetsTargets.cmake
cmake/macos/: MangoConfig.cmake.in  WidgetsConfig.cmake.in
core/: AnimationRegistry.cpp  AnimationRegistry.h  AnimationScheduler.cpp  AnimationScheduler.h  CMakeLists.txt  Event.h  FillStyle.cpp  FillStyle.h  MNRect.cpp  MNRect.h  PaintEvent.h  PainterPath.cpp  PainterPath.h  Point.h  ResizeEvent.cpp  ResizeEvent.h
core/animations/: ColorAnimation.h  EasingCurve.cpp  NumberAnimation.h  VariantAnimation.cpp  VariantAnimation.h
core/events/: Event.cpp  MouseEvent.h  PaintEvent.cpp  ResizeEvent.h
core/geometry/: MNSize.cpp  MNSize.h
core/layouts/: AnchorLayout.cpp  BoxLayout.cpp  BoxLayout.h  GridLayout.cpp  GridLayout.h  Layout.cpp  Layout.h
core/macos/: AnimationScheduler.cpp  AnimationScheduler.h
core/windows/: AnimationScheduler.h
example/: CMakeLists.txt  Switch.cpp  Switch.h  main.cpp
graphics/coregraphics/: CMakeLists.txt  CoreGraphicsContext.h  CoreGraphicsContext.mm  CoreGraphicsHelper.cpp  CoreGraphicsHelper.h
graphics/direct2d/: CMakeLists.txt  D2D1Helpers.cpp  Direct2DGraphicsContext.cpp  Direct2DGraphicsContext.h
plugins/: CMakeLists.txt
plugins/common/: AbstractWidget.h  CMakeLists.txt  Canvas.cpp  Canvas.h  GraphicsContext.h  PlatformView.cpp  PlatformView.h  PlatformWindow.cpp  PlatformWindow.h  Widget.cpp  Widget.h  WindowManager.cpp
widgets/: CMakeLists.txt  Widget.cpp  Widget.h
